samples/_failures_safe/1761313633_9d5ae0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9e8d99d.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_c9e8d99d.c:152:28: error: expected ‘;’ at end of input
  152 |             lexer->position
      |                            ^
      |                            ;
./samples/SAFE/__tmp_c9e8d99d.c:152:13: error: expected declaration or statement at end of input
  152 |             lexer->position
      |             ^~~~~
./samples/SAFE/__tmp_c9e8d99d.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9e8d99d.c:152:13: error: expected declaration or statement at end of input
